# Gestor_Credenciales

./: .gitignore  ISS25_Informe_trabajo_equipo.docx  README.md
GestorCredenciales/GestorCredenciales/: README.md  pyproject.toml
GestorCredenciales/GestorCredenciales/src/gestor_credenciales/: gestor_credenciales.py  utils.py
GestorCredenciales/GestorCredenciales/tests/gestor_credenciales/: test_seguridad_gestor_credenciales.py  test_utils.py
GestorCredenciales/GestorCredenciales/tests/gestor_credenciales/.hypothesis/constants/: 132fd84e6369acb3  4f5183ae7f318575  600cef6f1e6a3328  62f544cdde803041  8769f6c4f7674eef  8f418fe660fd0efa  8ffd74b0d1721c51  9459e787ef1a8d12  a451d5ee71ac59c5  a9197f2b8ca86864  b5a55287f5c6a23c  cbf8c5ad575ff8d8
GestorCredenciales/GestorCredenciales/tests/gestor_credenciales/.hypothesis/examples/04e6b3400353b141/: 915b270a8d45c552  ca125fed886616ee
GestorCredenciales/GestorCredenciales/tests/gestor_credenciales/.hypothesis/examples/419861ae7ee314cb/: 01dfa04abb56ecb4  06e5bbc28572b83f  0724a39ea09ce030  5ed49cb99334aac7  779db9b9e7742b48  93c18f3194fc1b6d  a0bd45c73d20e60a  b3b5bbd15dd4a584  ddbc96d566a6db6c  e7860bf65704e17f  f178470efe769daf  f493a5208856849c
GestorCredenciales/GestorCredenciales/tests/gestor_credenciales/.hypothesis/examples/43ad05754ab38091/: 34dc18d48ee71811
GestorCredenciales/GestorCredenciales/tests/gestor_credenciales/.hypothesis/examples/915b270a8d45c552/: 02550ac00879d2c2  07f6be11fbf0b1ef  4dba3a748e66503e  85aab73a477c056c  8d8f3c8450c6e3b1  8f26c50ea9145244  a4e56bc209b16a0b  ae0185d55f68c794  (+3 more)
(+372 files in other folders)
