[project]
name = "GestorCredenciales"
version = "0.1.0"
description = "Un ejemplo moderno de estructura de proyecto Python con uv"
authors = [
    { name = "Antonio Maña", email = "amana@uma.es" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://uma.es/mi_proyecto"
Repository = "https://uma.es/amana/mi_proyecto"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I"]
exclude = ["tests/data"]
